// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render Button 1`] = `
<button
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary"
  type="button"
>
  <span
    class="prokodo-Button__title"
  >
    Test title
  </span>
</button>
`;

exports[`The Button component should render disabled Button 1`] = `
<button
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary prokodo-Button--is-disabled"
  disabled=""
  type="button"
>
  <span
    class="prokodo-Button__title"
  >
    Test title
  </span>
</button>
`;

exports[`The Button component should render loading Button 1`] = `
<button
  class="prokodo-Button prokodo-Button--has-variant-contained prokodo-Button--has-bg-primary"
  type="button"
>
  <span
    class="prokodo-Button__title"
  >
    Test title
  </span>
</button>
`;
